fluxcd/infrastructure/base/resources/flux-operator-dashboard/httpGateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: flux-system
  hostnames:
    - flux-operator.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          port: 9080
